--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "rxjs": "6.5.2",
     "swagger-ui": "2.2.10",
     "tslib": "1.10.0",
-    "zone.js": "0.10.2"
+    "zone.js": "0.10.2",
+    "webstomp-client": "latest",
+    "app": "latest"
   },
   "devDependencies": {
     "@angular/cli": "8.3.1",
